[package]
name = "spawn_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "blocking"                    # cargo run --example blocking
path = "examples/blocking.rs"        # file or directory with main.rs
name = "async"                    # cargo run --example async
path = "examples/async.rs"        # file or directory with main.rs

[dependencies]
actix-web = "*"
serde = "*"
actix-rt = "*"
serde_derive = "*"
serde_json = "*"
shells = "*"
reqwest = { version = "*", features = ["native-tls", "json", "blocking"] }
tokio = { version = "*", features = ["full"] }
