[package]
edition = "2024"
name = "spawn_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "*"
actix-web = "*"
reqwest = {version = "*", features = ["native-tls", "json", "blocking"]}
serde = "*"
serde_derive = "*"
serde_json = "*"
shells = "*"
tokio = {version = "*", features = ["full"]}
tracing = "*"
tracing-actix-web = "*"
tracing-subscriber = {version = "*", features = ["env-filter", "fmt"]}
